# speechlib

./: .gitignore  ADVANCED_USAGE.md  LICENSE  README.md  benchmark_slice_c.py  library.md  metrics.txt  process_all.cmd  process_recordings.py  profile_run.py  pyproject.toml  requirements.txt  setup.py  setup_instruction.md  slice11.md
.github/: FUNDING.yml
devdocs/: 20260322-plan-optimizacion.md  Speechlib_architecture.md  analysis_tools.md  arquitectura.md  diagnostico_rendimiento_benchmark.md  examples_analysis.md  fix_preprocessor.md  guia_compresion.md  guia_proceso_videos_audios.md  metodologia_atdd_tdd.md  normalization_problem.md  optimizacion_pipeline.md  pipeline_benchmark.md  pipeline_comparison.md  plan_artifact_folder.md  plan_batched_whisper.md  plan_compress.md  plan_diagnose_speaker.md  plan_optimizacion_pipeline.md  plan_pyannote4.md  profiling.md  session_speaker_identification.md
devdocs/possible_new_features/: IMPLEMENTATION_PLAN_Version2.md  Numpy2.md  Numpy_opt.md
examples/: .gitignore  README.md  preprocess.py  transcribe.py
speechlib/: __init__.py  audio_state.py  audio_utils.py  batch_process.py  compress_audio.py  convert_to_mono.py  convert_to_wav.py  core_analysis.py  diarization.py  enhance_audio.py  extract_unknown_speakers.py  forced_align.py  hf_access.py  kernel_profiler.py  loudnorm.py  model_cache.py  mp3_to_wav.py  pipeline.py  pipeline_profiler.py  re_encode.py  resample_to_16k.py  run.py  scalene_runner.py  segment_merger.py  speaker_recognition.py  speechlib.py  step_timer.py  transcribe.py  vtt_utils.py  wav_segmenter.py  whisper_large.py  whisper_medium.py  whisper_sinhala.py  whisper_tiny.py  write_log_file.py
speechlib/components/: __init__.py  asr.py  base.py  diarizer.py  recognizer.py
speechlib/domain/: __init__.py  recognition.py  sample_extraction.py  transcript.py
speechlib/services/: __init__.py  extract_samples.py  relabel.py  transcript_builder.py
speechlib/tools/: batch_process.py  diagnose_speaker.py  enhance_audio_patch.py  enhance_voice_library.py  enroll_speaker.py  extract_unknown_speakers.py  normalize_and_clear.cmd  normalize_and_clear.py  process_recordings.py  relabel_vtt.py  revert_speakers.py
speechlib/tools/docs/: session_speaker_identification.md
tests/: conftest.py  test_acceptance.py  test_acceptance_artifacts_dir.py  test_acceptance_artifacts_preprocessing.py  test_acceptance_assign_speakers.py  test_acceptance_batch_process.py  test_acceptance_beam_size.py  test_acceptance_build_transcript_from_legacy.py  test_acceptance_cache_preprocessing.py  test_acceptance_compress_audio.py  test_acceptance_detect_unknown_speakers.py  test_acceptance_diarization_module.py  test_acceptance_diarization_tuning.py  test_acceptance_enhance_artifacts.py  test_acceptance_enhance_offline.py  test_acceptance_exclusive_alignment.py  test_acceptance_exclusive_diarization.py  test_acceptance_extract_speaker_samples.py  test_acceptance_extract_unknown_speakers.py  test_acceptance_forced_alignment.py  test_acceptance_merge_transcript.py  test_acceptance_preprocessor.py  test_acceptance_pyannote4.py  test_acceptance_pyannote_cache.py  test_acceptance_relabel_transcript.py  test_acceptance_remove_pydub.py  test_acceptance_rttm_cache.py  test_acceptance_sample_extraction.py  test_acceptance_skip_enhance.py  test_acceptance_slice_1_fullfile.py  test_acceptance_slice_a.py  test_acceptance_slice_b.py  test_acceptance_slice_c.py  test_acceptance_slice_d.py  test_acceptance_speaker_identity_preserves_tag.py  test_acceptance_speaker_map_cache.py  test_acceptance_speaker_recognition_aggregation.py  test_acceptance_speaker_recognition_e2e.py  test_acceptance_speaker_recognition_pyannote.py  test_acceptance_speaker_recognition_threshold.py  (+34 more)
tests/tools/: test_acceptance_batch_process.py  test_acceptance_enhance_voice_library.py  test_acceptance_enroll_speaker.py  test_acceptance_extract_unknown_speakers.py  test_acceptance_tools_artifacts.py  test_relabel_vtt_all_speakers.py  test_relabel_vtt_rttm.py  test_revert_speakers.py
