[project]
name = "speechlib"
version = "1.1.16"
description = "speechlib is a library that can do speaker diarization, transcription and speaker recognition on an audio file to create transcripts with actual speaker names. This library also contain audio preprocessor functions."
readme = "library.md"
requires-python = ">=3.10"
authors = [
    { name = "Navod Peiris", email = "navodpeiris1234@gmail.com" }
]
license = { text = "MIT" }
keywords = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]
dependencies = [
    "accelerate>=1.12.0",
    "assemblyai>=0.50.0",
    "faster-whisper>=1.2.1",
    "huggingface-hub>=0.36.0",
    "numpy>=1.26.4",
    "omegaconf>=2.3.0",
    "openai-whisper>=20250625",
    "pyannote-audio==4.0.4",
    "pydantic>=2.0",
    "scipy>=1.11.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.6",
]

[tool.setuptools.packages.find]
include = ["speechlib*"]

[project.urls]
Homepage = "https://github.com/NavodPeiris/speechlib"
Source = "https://github.com/NavodPeiris/speechlib"
Issues = "https://github.com/NavodPeiris/speechlib/issues"
Documentation = "https://github.com/NavodPeiris/speechlib#readme"
