[project]
name = "speechlib"
version = "1.1.16"
description = "speechlib is a library that can do speaker diarization, transcription and speaker recognition on an audio file to create transcripts with actual speaker names. This library also contain audio preprocessor functions."
readme = "library.md"
requires-python = ">=3.10"
authors = [
    { name = "Navod Peiris", email = "navodpeiris1234@gmail.com" }
]
license = { text = "MIT" }
keywords = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]
dependencies = [
    "accelerate==1.13.0",
    "assemblyai==0.54.1",
    "faster-whisper==1.2.1",
    "huggingface-hub==1.6.0",
    "numpy==2.2.6",
    "omegaconf==2.3.0",
    "openai-whisper==20250625",
    "pyannote-audio==4.0.4",
    "pydantic==2.12.5",
    "scipy==1.15.3",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "transformers==5.3.0",
]

[tool.setuptools.packages.find]
include = ["speechlib*"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that require HF_TOKEN and real audio (slow)",
]

[project.urls]
Homepage = "https://github.com/NavodPeiris/speechlib"
Source = "https://github.com/NavodPeiris/speechlib"
Issues = "https://github.com/NavodPeiris/speechlib/issues"
Documentation = "https://github.com/NavodPeiris/speechlib#readme"
