[project]
name = "speechlib"
version = "2.0.2"
description = "Speechlib is a library that unifies speaker diarization, transcription and speaker recognition in a single pipeline to create transcripts for audio conversations with actual speaker names and time tags. This library also contains audio preprocessor functions."
readme = "library.md"
requires-python = ">=3.10"

authors = [
    { name = "Navod Peiris", email = "navodpeiris1234@gmail.com" }
]

license = { text = "MIT" }

keywords = [
    "speech",
    "audio",
    "transcription",
    "speaker-diarization",
    "speaker-recognition",
    "nlp",
    "asr"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "accelerate>=1.12.0",
    "assemblyai>=0.50.0",
    "faster-whisper>=1.2.1",
    "huggingface-hub==0.36.0",
    "numpy==1.26.4",
    "openai-whisper>=20250625",
    "pyannote-audio==3.4.0",
    "torch>=2.2,<2.8.0",
    "torchaudio>=2.2,<2.8.0",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "speechbrain==1.0.3",
    "transformers==4.57.6",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
    "pytest>=8.0.0",
    "nemo_toolkit[asr]"
]

[project.urls]
Homepage = "https://github.com/NavodPeiris/speechlib"
Repository = "https://github.com/NavodPeiris/speechlib"
Issues = "https://github.com/NavodPeiris/speechlib/issues"
Documentation = "https://github.com/NavodPeiris/speechlib#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "speechlib/",
    "library.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["speechlib"]
